--- a/join.html
+++ b/join.html
@@ -30,7 +30,7 @@
 
     <form id="join-form" action="https://formsubmit.co/joshualavistoepic@gmail.com" method="POST">
       <!-- For local Live Server, use your full local URL below -->
-      <input type="hidden" name="_next" value="http://127.0.0.1:5500//thankyou.html" />
+      <input type="hidden" name="_next" value="https://joshua660411.github.io/CampusRealtor/index.html" />
       <input type="hidden" name="_captcha" value="false" />
       
       <label for="firstName">First Name*</label>
