--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 <body>
   <div class="sidebar" id="sidebar">
     <ul>
-      <li><a href="#">AGENTS</a></li>
-      <li><a href="#">MEMBERS</a></li>
-      <li><a href="#">NEWBIE</a></li>
-      <li><a href="#">SUCCESS</a></li>
-      <li><a href="#">EVENTS</a></li>
-      <li><a href="#">SCHEDULE</a></li>
+      <li><a href="#">HOME</a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=61570074330398">ABOUT</a></li>
+      <li><a href="#">MISSION & VISION</a></li>
     </ul>
   </div>
 
@@ -27,7 +24,7 @@
     <nav class="menu">
       <ul>
         <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=61570074330398">ABOUT</a></li>
         <li><a href="#">MISSION & VISION</a></li>
         <li><a href="#">CONTACT</a></li>
       </ul>
